--- a/ForestNationalBank/appsettings.json
+++ b/ForestNationalBank/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=BankAccountsContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
