--- a/FirstNationalBank/appsettings.json
+++ b/FirstNationalBank/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BankAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:firstnationalbankdbserver.database.windows.net,1433;Initial Catalog=FirstNationalBank_db;Persist Security Info=False;User ID=firstnationalbankadmin;Password=Lenovo456!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
